2014-07-15  Thomas E. Dickey  <tom@invisible-island.net>

	* aclocal.m4: resync with my-autoconf (no change to configure script)

	* VERSION, package/byacc.spec, package/debian/changelog, package/mingw-byacc.spec, package/pkgsrc/Makefile:
	bump

	* test/run_test.sh:
	make top-level "make check" work again, by adding another step to filtering
	the test results.

2014-07-14  Thomas E. Dickey  <tom@invisible-island.net>

	* test/run_test.sh: changes from Garrett Cooper's patch:
		a) ensure that the script returns an error-code if there are differences
		b) escape "." character in left side of sed expression for $YACC
		c) ensure that $ifBTYACC has a value

	* test/btyacc/big_b.output, test/btyacc/big_l.output, test/btyacc/help.output, test/btyacc/no_b_opt.output, test/btyacc/no_output2.output, test/btyacc/no_p_opt.output, test/btyacc/nostdin.output:
	regen (reminder by Garrett Cooper)

2014-07-14  Garrett.Cooper
